# Metope

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STM32F405RGT6_FLASH.ld  STM32F405RGTx_FLASH.ld  assert.cc  assert.h  clean.sh  device.h  fstbuild.sh  global.cc  global.h  init.c  init.h  main.c  main.cc  note.md  rebuild.sh  setup.env  stm32f4xx_hal_conf.h  temp.sh
STM32CubeMX/STM32F405RGT6/: .mxproject  STM32F405RGT6.ioc
STM32CubeMX/STM32F411CEU6/: .mxproject  STM32F411CEU6.ioc
STM32CubeMX/vscode-macOS_x86_64/: c_cpp_properties.json
app/: app.cmake  app_clock.c  app_cmdbox.c  app_cmdbox_callback.h  app_gui.c  app_gui_asset  app_lvgl.c  app_rtos.c  app_rtos_heap_4.c  app_task.c
app/include/: app_clock.h  app_cmdbox.h  app_gui.h  app_lvgl.h  app_rtos.h  app_rtos_heap_4.h  app_task.h  app_type.h
artifacts/: main_native.cc  main_program.cc
artifacts/STM32F405RGT6/: .mxproject
artifacts/STM32F405RGT6/Core/Inc/: stm32f4xx_hal_conf.h
artifacts/STM32F405RGT6/Core/Src/: main.c  stm32f4xx_it.c
artifacts/vscode-common/: launch.json
backup/: main_emulator.cc  main_native.cc  main_program.cc  main_unittest.cc  main_utf.c
backup/STM32F405RGT6/: Makefile  STM32F405RGT6.ioc
backup/STM32F405RGT6/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
backup/STM32F405RGT6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
backup/STM32F411CEU6/: .mxproject  Makefile  STM32F411CEU6.ioc
backup/STM32F411CEU6/Core/Inc/: main.h  stm32f4xx_it.h
backup/STM32F411CEU6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
backup/STM32F411CEU6/STM32F411CEU6/: Makefile  STM32F411CEU6.ioc
backup/STM32F411CEU6/STM32F411CEU6/Core/Inc/: main.h  stm32f4xx_it.h
backup/STM32F411CEU6/STM32F411CEU6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
backup/STM32F411CEU6/STM32F411CEU6/STM32F411CEU6/: Makefile  STM32F411CEU6.ioc
backup/STM32F411CEU6/STM32F411CEU6/STM32F411CEU6/Core/Src/: main.c
backup/cortex/: CMakeLists.txt
backup/native/: CMakeLists.txt
backup/vscode-common/: launch.json  tasks.json
backup/vscode-macOS_arm64/: c_cpp_properties.json  settings.json
backup/vscode-macOS_x86_64/: launch.json  settings.json
bsp/: bsp.cmake  bsp_battery.c  bsp_cpu.c  bsp_gyro.c  bsp_led.c  bsp_rtc.c  bsp_screen.c  bsp_timer.c  bsp_uart.c
bsp/include/: bsp_battery.h  bsp_cpu.h  bsp_gyro.h  bsp_led.h  bsp_rtc.h  bsp_screen.h  bsp_timer.h  bsp_type.h  bsp_uart.h
cmake/: arm-gcc-toolchain.cmake  debug.cmake
cmn/: cmn.cmake  cmn_callback.c  cmn_color.c  cmn_delay.c  cmn_interrupt.c  cmn_math.c  cmn_utility.c
cmn/include/: cmn_callback.h  cmn_color.h  cmn_delay.h  cmn_device.h  cmn_interrupt.h  cmn_math.h  cmn_type.h  cmn_utility.h
dbg/: catch_hardfault.sh
doc/: pin.numbers
doc/SpeedStudio/: SpeedStudio.kicad_prl  SpeedStudio.kicad_pro
lib/: .gitignore  FreeRTOSConfig.h  lib.cmake  lv_conf.h  lv_conf_8_3_6.h  lv_conf_9_2_2.h
pcb/: AltiumDesigner - PCB.pcbdoc  AltiumDesigner - Sheet_1.schdoc  AltiumDesigner - Sheet_2.schdoc  AltiumDesigner - Sheet_3.schdoc
sqlstudio/ModernClockStyle/: ModernClock.sll  ModernClock.spj
sqlstudio/VVWClockStyle/: SQLine.sll  SQLine.spj
sqlstudio/assets/: letter.psd
test/: app_test.cc  bsp_test.cc  cmn_test.cc  test.cc  test.cmake
test/include/: app_test.hh  bsp_test.hh  cmn_test.hh  test.hh
tool/: autorun.sh  clean.sh  download.sh  fstbuild.sh  install_qemu.sh  pause.sh  rebuild.sh  test.sh  uart.py
top/: assert.cc  assert.h  device.h  global.cc  global.h  init.c  init.h  memory.cc  memory.h  top.cmake  trace.cc  trace.h
